bat.bool1.sleepin.SleepIn.scala.error
Erreur de compilation :
SleepIn:2: error: not found: value vacaion
def sleepIn(weekday: Boolean, vacation: Boolean): Boolean = {(!weekday)&&(!vacation) || (!weekday)&&(vacaion) || (weekday)&&(vacation)
                                                                                                     ^