bat.bool1.sleepin.SleepIn.scala.code
def sleepIn(weekday: Boolean, vacation: Boolean): Boolean = {(!weekday)&&(!vacation) || (!weekday)&&(vacaion) || (weekday)&&(vacation)
}